k8s/base/services/forward-auth/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: keycloak-forward-auth
  namespace: forward-auth
spec:
  forwardAuth:
    address: http://keycloak-forward-auth.forward-auth.svc.cluster.local:4181
    authResponseHeaders:
      - X-Forwarded-User
