k8s/base/services/forward-auth/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak-forward-auth
  namespace: forward-auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak-forward-auth
  template:
    metadata:
      labels:
        app: keycloak-forward-auth
    spec:
      containers:
        - name: keycloak-forward-auth
          image: thomseddon/traefik-forward-auth:latest
          resources: {}
