k8s/base/services/forward-auth/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-forward-auth
  namespace: forward-auth
spec:
  ports:
    - port: 4181
      targetPort: 4181
  selector:
    app: keycloak-forward-auth
