k8s/base/services/forward-auth/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: forward-auth-proto-https
  namespace: forward-auth
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Proto: "https"

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: forward-auth
  namespace: forward-auth
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`forwardauth.loeffelmeister.de`)
      kind: Rule
      services:
        - name: keycloak-forward-auth
          port: 4181
      middlewares:
        - name: forward-auth-proto-https
          namespace: forward-auth
